--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -824,10 +824,11 @@
     "resetWalletDatNotice": "Are you sure you want to reset?",
     "confirmResetWalletText": "To confirm reset wallet, type '%{text}' in the field.",
     "yeResetpWalletNotice": "Yes",
-    "noResetWalletNotice": "No"
+    "noResetWalletNotice": "No",
+    "download": "Download"
   },
   "general": {
     "defiApp": "DeFi app",
-    "updateFailed": "An error occurred while checking for a software update."
+    "updateFailed": "An error occurred while checking for a software update. Please manually download the latest release from defichain.com. (Only download the app from official sources)"
   }
 }
