Fix: Swap recipient error

--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -284,7 +284,9 @@
       },
       "swapTab": {
         "from": "Von",
-        "to": "In"
+        "to": "In",
+        "receiveTokensAt": "Receive tokens at",
+        "receiveAddress": "Empfänger Adresse"
       },
       "poolTab": {
         "yourLiquidity": "Deine liquidity",
