Added german translation

--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -285,7 +285,7 @@
       "swapTab": {
         "from": "Von",
         "to": "In",
-        "receiveTokensAt": "Receive tokens at",
+        "receiveTokensAt": "Token erhalten bei",
         "receiveAddress": "Empfänger Adresse"
       },
       "poolTab": {
