fix: set default receive address and update pagination label

--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -703,7 +703,9 @@
         "category": "Kategorie",
         "blockHeight": "Blockhöhe",
         "amount": "Anzahl",
-        "txidNotApplicable": "Transaktions-ID nicht anwendbar"
+        "txidNotApplicable": "Transaktions-ID nicht anwendbar",
+        "walletPaginationRange": "%{from} – %{to} of %{total} wallets",
+        "txPaginationRange": "%{to} – %{from} of %{total} transaktionen"
       },
       "walletTxns": {
         "height": "Höhe",
