fix: update wallet existing err

--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -651,7 +651,7 @@
         "addReceiveAddress": "Add a receive address",
         "address": "Address",
         "enterAnAddress": "Enter an address in your account",
-        "invalidAddress": "Invalid address. Please check this belongs to you, the current address has been used."
+        "invalidAddress": "Address exist in wallet."
       },
       "paymentRequests": {
         "time": "Time",
