--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -656,7 +656,7 @@
         "addReceiveAddress": "Eine Empfangsadresse hinzufügen",
         "address": "Adresse",
         "enterAnAddress": "Gib eine Adresse in dein Konto ein",
-        "invalidAddress": "Ungültige Adresse. Bitte versichere dich, dass diese Adresse dir gehört, die Adresse wird bereits verwendet."
+        "invalidAddress": "Adresse im Wallet vorhanden"
       },
       "paymentRequests": {
         "time": "Zeit",
