feat: address validation

--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -651,8 +651,9 @@
         "addReceiveAddress": "Add a receive address",
         "address": "Address",
         "enterAnAddress": "Enter an address in your account",
-        "invalidAddress": "Invalid address. Please check this belongs to you, the current address has been used.",
-        "existingAddress": "Address exist in wallet."
+        "existingAddressOthers": "Invalid address. Please check this belongs to you, the current address has been used.",
+        "existingAddress": "Address exist in wallet.",
+        "invalidAddress": "Invalid address."
       },
       "paymentRequests": {
         "time": "Time",
