--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -656,8 +656,9 @@
         "addReceiveAddress": "Eine Empfangsadresse hinzufügen",
         "address": "Adresse",
         "enterAnAddress": "Gib eine Adresse in dein Konto ein",
-        "invalidAddress": "Ungültige Adresse. Bitte versichere dich, dass diese Adresse dir gehört, die Adresse wird bereits verwendet.",
-        "existingAddress": "Adresse im Wallet vorhanden."
+        "existingAddressOthers": "Ungültige Adresse. Bitte versichere dich, dass diese Adresse dir gehört, die Adresse wird bereits verwendet.",
+        "existingAddress": "Adresse im Wallet vorhanden.",
+        "invalidAddress": "Ungültige Adresse."
       },
       "paymentRequests": {
         "time": "Zeit",
