fix: URL to DEX instead of LP in Swap Page

--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -410,7 +410,8 @@
         "transferringTokens": "Transferring tokens",
         "tokensTransferred": "Tokens transferred",
         "dexExplorer": "Dex Explorer",
-        "insufficientUtxos": "Insufficient UTXOs to swap"
+        "insufficientUtxos": "Insufficient UTXOs to swap",
+        "backToDEX": "Back to DEX"
       },
       "swapTab": {
         "from": "From",
