--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -599,6 +599,7 @@
         "title": "Wallet - Wallet wiederherstellen",
         "restoreWallet": "Wallet wiederherstellen",
         "restoreWalletGuideLine": "Gebe die 24 Wörter in deinem Mnemonic Seed ein, um die Wallet wiederherzustellen.",
+        "enterWord": "Wort eingeben",
         "restoringWallet": "Wallet wird wiederhergestellt",
         "restore": "WIEDERHERSTELLEN",
         "backToWalletPage": "SCHLIESSEN"
