--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -595,6 +595,7 @@
         "title": "Wallet - Restore wallet",
         "restoreWallet": "Restore wallet",
         "restoreWalletGuideLine": "Enter the 24 words in your mnemonic seed to restore wallet.",
+        "enterWord": "Enter word",
         "restoringWallet": "Restoring wallet",
         "restore": "Restore",
         "backToWalletPage": "Close"
