Follow-up: Finalized translations for DE

--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -694,7 +694,7 @@
         "receive": "Empfangen",
         "paymentRequests": "Zahlungsanordnungen",
         "noPaymentRequests": "Keine Empfangsadressen verfügbar",
-        "paginationRange": "%{from} - %{to} von %{total} Empfangsadressen",
+        "paginationRange": "%{from} - %{to} von %{total} Adressen",
         "transactions": "Transaktionen",
         "availableBalance": "Verfügbares Guthaben",
         "pending": "Ausstehend",
@@ -725,7 +725,7 @@
         "time": "Zeit",
         "amount": "Höhe",
         "hash": "Hash",
-        "paginationRange": "%{from} – %{to} von %{total} Transaktion",
+        "paginationRange": "%{from} – %{to} von %{total} Transaktionen",
         "noTransactions": "Keine Transaktionen verfügbar",
         "accountToAccount": "Konto zu Konto",
         "utxosToAccount": "UTXOs auf Konto",
