Follow-up: Reorder „from“ & „to“ amounts at pagination bar

--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -693,8 +693,8 @@
         "send": "Send",
         "receive": "Receive",
         "paymentRequests": "Receive addresses",
-        "noPaymentRequests": "No received addresses available",
-        "paginationRange": "%{from} - %{to} of %{total} received addresses",
+        "noPaymentRequests": "No receive addresses available",
+        "paginationRange": "%{from} - %{to} of %{total} receive addresses",
         "transactions": "Transactions",
         "availableBalance": "Available balance",
         "pending": "Pending",
