feat: encrypt wallet initial commit

--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -811,9 +811,10 @@
     "okIHaveDoneIt": "Ok, I have done it",
     "encryptWalletNoticeTitle": "Lock wallet",
     "encryptWalletNotice": "Enabling wallet locking with a passphrase is recommended for security. Enter the passphrase which you will use to unlock your wallet.",
+    "encryptWalletWarning": "Keep your passphrase safe. Losing it means you need to reset DeFi app to default settings and restore your wallets again.",
     "enableLocking": "Enable locking",
     "later": "Later",
-    "passphraseLabel": "Enter passphrase",
+    "passphraseLabel": "Passphrase",
     "proceed": "Proceed",
     "reset": "Reset",
     "encryptWalletSuccess": "Wallet encrypted ",
