--- a/webapp/src/translations/languages/nl.json
+++ b/webapp/src/translations/languages/nl.json
@@ -339,7 +339,8 @@
       "network": "Netwerk",
       "mainnet": "Mainnet",
       "testnet": "Testnet",
-      "regnet": "Regnet"
+      "regnet": "Regnet",
+      "peersAndBlocks": "Delete peers and blocks"
     },
     "wallet": {
       "createOrRestoreWalletPage": {
@@ -573,7 +574,8 @@
     "restartWalletModalHeader": "Opnieuw opstarten vereist",
     "restartWalletWarningNotice": "U moet de DeFi-app opnieuw opstarten. Wilt u opnieuw opstarten?",
     "yesRestartWalletNotice": "Herstart nu ",
-    "noRestartWalletNotice": "Later"
+    "noRestartWalletNotice": "Later",
+    "peersAndBlocks": "Delete peers and blocks"
   },
   "general": {
     "defiApp": "DeFi app"
