--- a/webapp/src/translations/languages/fr.json
+++ b/webapp/src/translations/languages/fr.json
@@ -526,7 +526,7 @@
       "mainnet": "Mainnet",
       "testnet": "Testnet",
       "regnet": "Regnet",
-      "peersAndBlocks": "Delete peers and blocks"
+      "deletePeersAndBlocks": "Delete peers and blocks"
     },
     "wallet": {
       "createOrRestoreWalletPage": {
@@ -762,7 +762,7 @@
     "restartWalletWarningNotice": " Vous devez redémarrer l'app DeFi. Voulez-vous redémarrer maintenant?",
     "yesRestartWalletNotice": "Redémarrer maintenant",
     "noRestartWalletNotice": "Plus tard",
-    "peersAndBlocks": "Delete peers and blocks"
+    "deletePeersAndBlocks": "Delete peers and blocks"
   },
   "general": {
     "defiApp": "App DeFi"
