--- a/webapp/src/translations/languages/zhs.json
+++ b/webapp/src/translations/languages/zhs.json
@@ -536,7 +536,7 @@
       "mainnet": "主网",
       "testnet": "测试网",
       "regnet": "沙河测试网",
-      "peersAndBlocks": "Delete peers and blocks"
+      "deletePeersAndBlocks": "Delete peers and blocks"
     },
     "wallet": {
       "createOrRestoreWalletPage": {
@@ -797,7 +797,7 @@
     "confirmResetWalletText": "请把 ‘%{text}’ 输入在文本域里，以确定刷新。",
     "yeResetpWalletNotice": "是的",
     "noResetWalletNotice": "否定",
-    "peersAndBlocks": "Delete peers and blocks"
+    "deletePeersAndBlocks": "Delete peers and blocks"
   },
   "general": {
     "defiApp": "DeFi 应用程式"
