--- a/webapp/src/translations/languages/zhs.json
+++ b/webapp/src/translations/languages/zhs.json
@@ -797,7 +797,7 @@
     "confirmResetWalletText": "请把 ‘%{text}’ 输入在文本域里，以确定刷新。",
     "yeResetpWalletNotice": "是的",
     "noResetWalletNotice": "否定",
-    "deletePeersAndBlocks": "Delete peers and blocks"
+    "deletePeersAndBlocks": "删除对等节点与区块数据"
   },
   "general": {
     "defiApp": "DeFi 应用程式"
