feat: restore wallet on select

--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -608,7 +608,8 @@
         "enterWord": "Enter word",
         "restoringWallet": "Restoring wallet",
         "restore": "Restore",
-        "backToWalletPage": "Close"
+        "backToWalletPage": "Close",
+        "importingWallet": "Importing wallet"
       },
       "sendPage": {
         "sendTitle": "Send",
