--- a/webapp/src/translations/languages/zht.json
+++ b/webapp/src/translations/languages/zht.json
@@ -37,7 +37,8 @@
       "help": "支援",
       "settings": "設定",
       "console": "命令行界面",
-      "liquidity": "流動資金"
+      "liquidity": "流動資金",
+      "selectCreateRestore": "選擇，創建或還原錢包來訪問錢包功能"
     },
     "blockChainPage": {
       "blockChainPage": {
@@ -542,9 +543,14 @@
         "title": "錢包 - 創建或恢復錢包",
         "createOrRestoreWallet": "創建或恢復錢包",
         "createANewWallet": "創建錢包",
-        "restoreWalletFromMnemonicSeed": "使用助記種子恢復錢包",
+        "restoreWalletFromMnemonicSeed": "從恢復種子還原錢包",
         "walletSyncNotice": "同步完成後您就能創建或恢復錢包",
-        "loading": "加載中…"
+        "loading": "加载中…",
+        "connectToALedger": "连接硬件钱包",
+        "hdWallet": "連接硬件錢包",
+        "mnemonicSeed": "助記詞",
+        "chooseRecentBackup": "或者選擇最近的備份",
+        "comingSoon": "即將來臨"
       },
       "createNewWalletPage": {
         "back": "回返",
@@ -583,7 +589,8 @@
         "restoreWalletGuideLine": "請輸入您助記種子的 24個字以恢復錢包。",
         "restoringWallet": "錢包恢復中",
         "restore": "恢復",
-        "backToWalletPage": "關閉"
+        "backToWalletPage": "關閉",
+        "importingWallet": "錢包導入中"
       },
       "sendPage": {
         "sendTitle": "發送",
@@ -795,7 +802,8 @@
     "resetWalletDatNotice": "確定刷新錢包嗎？",
     "confirmResetWalletText": "請把 ‘%{text}’ 輸入在文本域裡，以確定刷新。",
     "yeResetpWalletNotice": "是的",
-    "noResetWalletNotice": "否定"
+    "noResetWalletNotice": "否定",
+    "restoreYourWallet": "從以下備份中還原您的錢包?"
   },
   "general": {
     "defiApp": "DeFi 應用程式"
