feat: exit wallet changes

--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -850,7 +850,9 @@
     "noResetWalletNotice": "No",
     "download": "Download",
     "restoreYourWallet": "Restore your wallet from the following backup?",
-    "exitBackupWarning": "Exiting your wallet now will remove your wallet from the app. You will need your mnemonic seed phrase if you want to add this wallet later. Do you wish to backup your wallet before exiting?"
+    "exitBackupWarning": "Exiting your wallet now will remove your wallet from the app. You will need your mnemonic seed phrase if you want to add this wallet later. Do you wish to backup your wallet before exiting?",
+    "backupAndExit": "Backup and Exit",
+    "exit": "Exit"
   },
   "general": {
     "defiApp": "DeFi app",
